# portmidi-sharedlib

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  configure.in
pm_linux/.libs/: libportmidi.la  libportmidi.lai  libportmidi.so.0.0.0  libporttime.la  libporttime.lai  libporttime.so.0.0.0
